--- a/src/assets/stylesheets/application/_placeholders.scss
+++ b/src/assets/stylesheets/application/_placeholders.scss
@@ -16,7 +16,9 @@
 }
 
 %logos {
-  @include image-2x('../images/logos@2x.png', 182px, 59px);
+  // @include image-2x('../images/logos@2x.png', 182px, 59px);
+  @include image-2x('../images/logos@2x.png', 105px, 110px);
   display: block;
   background-image: url(../images/logos.png);
+  background-size: 105px;
 }
